deploy/yamls/repofortestingm2k-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: repofortestingm2k
  name: repofortestingm2k
spec:
  ports:
    - name: port-8080
      port: 8080
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: repofortestingm2k
  type: ClusterIP
status:
  loadBalancer: {}
